samples/_failures_safe/1761267906_66770c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea8bd7c9.c: In function ‘main’:
./samples/SAFE/__tmp_ea8bd7c9.c:146: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_ea8bd7c9.c:145:9: error: expected declaration or statement at end of input
  145 |         return EXIT_FAILURE
      |         ^~~~~~
./samples/SAFE/__tmp_ea8bd7c9.c:145:9: error: expected declaration or statement at end of input
